project setup with folder restructure, adding inventory section
