# app/modules/admin/admin.route.ts
@@ -1,13 +1,11 @@
 
 import { Router } from "express";
-import { catchError } from "../common/middleware/cath-error.middleware";
+import { catchError } from "../../common/middleware/cath-error.middleware";
 import * as adminController from "./admin.controller";
 
 const router = Router();
 
 router.post("/", catchError, adminController.createUser);
 router.post("/login", adminController.getUserByLogin)
-router.patch("/restrict-user/:id", adminController.restrictUser)
-router.get("/active-sessions", adminController.activeSessions)
 
 export default router;
